# mathil

./: .gitattributes  README.md
Examples/: Examples.fs
archival/: README.md
archival/examples/: Examples.fs
archival/package/: Mathil.1.0.2.nupkg  Mathil.1.1.0.nupkg  Mathil.1.2.0.nupkg
archival/src/: .gitignore  Mathil.sln
archival/src/Mathil/: Bitmap.fs  Colours.fs  CompoundShapes.fs  MathematicalObjects.fs  Mathil.fsproj  Rendering.fs
archival/src/Testing and Debugging/: Program.fs  Testing and Debugging.fsproj
documentation/: .gitignore  content.tex  main.tex
examples/: Examples.fs
examples/curve-intersection/: main.rs
examples/geometric-representations-of-trig-functions/: main.rs
examples/rose/: main.rs
examples/vector-field/: main.rs
examples/venn-diagram/: main.rs
package/: Mathil.1.0.0.nupkg  Mathil.1.0.1.nupkg
src/Mathil/: BezierCurves.fs  Bitmap.fs  Colours.fs  CompoundShapes.fs  FileIO.fs  FunctionSampling.fs  Lines.fs  MathematicalConstants.fs  MathematicalObjects.fs  MathematicalPrimitives.fs  Mathil.fsproj  Polygons.fs  Rendering.fs  Templates.fs
src/Testing and Debugging/: Program.fs
src/mathil/: Cargo.toml
src/mathil/src/: main.rs
src/mathil/src/mathil/: animation.rs  colours.rs  constants.rs  maths_objects.rs  mod.rs  output.rs  primitive_conversions.rs  rendering.rs  utilities.rs
